Make sure non-native file dialogs show extensions

Since the fix in the file dialog that was implemented
is based on extensions mentioned in the filter,
the filter needs to show the extensions...
It's a bit of an unwanted dependency between view and logic,
so it would be good to find a way to implement it wiser.

BUG:412651