libs/widgetutils/KoFileDialog.cpp
@@ -162,7 +162,7 @@ void KoFileDialog::createFileDialog()
     bool optionDontUseNative = group.readEntry("DontUseNativeFileDialog", dontUseNative);
     d->fileDialog->setOption(QFileDialog::DontUseNativeDialog, optionDontUseNative);
     d->fileDialog->setOption(QFileDialog::DontConfirmOverwrite, false);
-    d->fileDialog->setOption(QFileDialog::HideNameFilterDetails, true);
+    d->fileDialog->setOption(QFileDialog::HideNameFilterDetails, dontUseNative ? true : false);
 
 #ifdef Q_OS_MACOS
     QList<QUrl> urls = d->fileDialog->sidebarUrls();
